add system information on installed magento-patches

--- a/app/locale/de_DE/Ffuenf_Common.csv
+++ b/app/locale/de_DE/Ffuenf_Common.csv
@@ -1,5 +1,6 @@
 "ffuenf Extensions","ffuenf Extensions"
 "Extensions Installed","Installierte Extensions"
+"Installed Magento Patches", "Installierte Magento-Patches"
 "Here you can find a list of all ffuenf extensions currently installed on your system.","Liste aller Extensions von ffuenf die in diesem System installiert sind."
 "Logging Configuration", "Log Konfiguration"
 "Enable the logging functions for debugging purposes only", "Aktivieren Sie die Log-Funktion nur zur Fehlersuche."
